CORE-48182: z-index issue for the aura popup is resolved.

--- a/docroot/themes/custom/transac/alshaya_alo_yoga/conditional-sass/aura-loyalty-global/component/_aura-header-desktop-alignment.scss
+++ b/docroot/themes/custom/transac/alshaya_alo_yoga/conditional-sass/aura-loyalty-global/component/_aura-header-desktop-alignment.scss
@@ -28,6 +28,12 @@ body.aura-enabled {
           z-index: 14;
         }
       }
+
+      .block-alshaya-super-category-menu.hide-super-category {
+        @include breakpoint($upto-desktop) {
+          display: none !important;
+        }
+      }
     }
 
     &.wishlist-enabled {
